fix overflow

--- a/web/src/main/webapp/css/styles.less
+++ b/web/src/main/webapp/css/styles.less
@@ -129,6 +129,7 @@ body, html{
     height: calc(100% - 51px);
     position: absolute;
     transition: .3s;
+    overflow-y: auto;
 }
 #tables{
     input{
@@ -605,7 +606,7 @@ body, html{
     /*margin-bottom: 10%;*/
     transform: translate(-50%, 0%);
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .createFotoForm{
 
@@ -801,8 +802,6 @@ div#gallery{
     position: relative;
     width: 100%;
     height: 100%;
-    overflow-y: auto;
-    /*border: 1px solid @red;*/
 }
 
 div#gallery{
@@ -859,7 +858,7 @@ div#gallery{
 ==============================================================================
 */
 div.page#curent_foto{
-    overflow-y: auto;
+
 }
 
 div.page#curent_foto{
